CallMD/src/objects/Payments__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Fee__c</fullName>
        <label>Admin. Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consultation_Payment__c</fullName>
        <label>Consultation Payment</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Consultation_Payment__c</fullName>
        <label>Non-Consultation Payment</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Consultants__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Consultants</label>
        <referenceTo>Open_Consultants__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <label>Payments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PYID#{00000}</displayFormat>
        <label>Payments ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>